price were not visible on larger screens so put media to fix it. Animation delay larger on menus

--- a/css/style.css
+++ b/css/style.css
@@ -352,13 +352,13 @@
   animation-delay: 0;
 }
 .menu--carte:nth-child(3) {
-  animation-delay: 0.1875s;
+  animation-delay: 0.75s;
 }
 .menu--carte:nth-child(4) {
-  animation-delay: 0.25s;
+  animation-delay: 1s;
 }
 .menu--carte:nth-child(5) {
-  animation-delay: 0.3125s;
+  animation-delay: 1.25s;
 }
 @keyframes apparition {
   0% {
@@ -397,6 +397,21 @@
 }
 .menu--carte:is(:hover, :focus) .menu--carte__selection ion-icon {
   transform: rotate(360deg);
+}
+@media screen and (min-width: 479px) {
+  .menu--carte:is(:hover, :focus) .menu--carte__descriptif :nth-child(2) {
+    transform: translateX(-80px);
+  }
+}
+@media screen and (min-width: 692px) {
+  .menu--carte:is(:hover, :focus) .menu--carte__descriptif :nth-child(2) {
+    transform: translateX(-120px);
+  }
+}
+@media screen and (min-width: 839px) {
+  .menu--carte:is(:hover, :focus) .menu--carte__descriptif :nth-child(2) {
+    transform: translateX(-190px);
+  }
 }
 .menu--carte__selection {
   position: absolute;
